fix background image jump on scroll (mobile)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,6 +67,9 @@
     /* special */
     --brand-facebook: #1877F2;
     --brand-facebook-hover: rgba(24,119,242,0.18);
+
+    /* mobile scroll hack */
+    --vh: 1vh;
 }
 
 * { box-sizing: border-box; }
